# Milestone2

Module00/ex0/: ft_hello_garden.py
Module00/ex0/practices/: ex0.py  ex1.py  ex10.py  ex11.py  ex12.py  ex13.py  ex14.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py  ex7.py  ex8.py  ex9.py
Module6/: elements.py  ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
Module6/alchemy/: __init__.py  elements.py  potions.py
Module6/alchemy/grimoire/: __init__.py  dark_validator.py  light_spellbook.py  light_validator.py
Module6/alchemy/transmutation/: recipes.py
Module7/ex0/ex0/: creature.py  fire_creature.py  water_creature.py
Module7/ex1/: capacitor.py
Module7/ex1/ex0/: battle.py
Module7/ex1/ex0/ex0/: factories.py
Module7/ex1/ex1/: __init__.py  healing_creatures.py  transform_creatures.py
Module7/ex2/: tournament.py
Module7/ex2/ex0/ex0/: __init__.py
Module7/ex2/ex1/ex1/: capabilities.py
Module7/ex2/ex2/: __init__.py  strategies.py
Module8/ex0/: construct.py
Module8/ex0/matrix_env/: pyvenv.cfg
Module8/ex1/: loading.py  pyproject.toml  requirements.txt
Module8/ex1/env/: pyvenv.cfg
