[project]
name = "matrix-loader"
version = "0.1.0"
description = "Matrix loading and analysis simulation tool"
authors = [
    {name = "Portos"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas>=2.1.4",
    "numpy>=1.26.0,<2.0.0",
    "matplotlib==3.7.2",
    "requests==2.31.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"